fix: fixed z-index issues

--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,8 @@ img {
 }
 
 .main {
+  position: relative;
+  z-index: 10;
   padding: 105px 0 0;
 }
 @media (max-width: 992px) {
@@ -177,6 +179,8 @@ img {
 }
 
 .footer {
+  position: relative;
+  z-index: 10;
   padding: 12px 0;
   background-color: #000000;
 }
