--- a/scss/_l-footer.scss
+++ b/scss/_l-footer.scss
@@ -1,4 +1,6 @@
 .footer {
+  position: relative;
+  z-index: 10;
   padding: 12px 0;
   background-color: $black;
 
