--- a/scss/_l-main.scss
+++ b/scss/_l-main.scss
@@ -1,4 +1,6 @@
 .main {
+  position: relative;
+  z-index: 10;
   padding: 105px 0 0;
 
   @include laptop {
